samples/_failures_safe/1761404105_7df0de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_662b201c.c: In function ‘main’:
./samples/SAFE/__tmp_662b201c.c:177:5: error: expected expression at end of input
  177 |     for (int i = 0;
      |     ^~~
./samples/SAFE/__tmp_662b201c.c:177:5: error: expected declaration or statement at end of input
